Fixing various and sundry spacing issues that came along with section_nav.

--- a/media/css/main.css
+++ b/media/css/main.css
@@ -232,13 +232,14 @@ div#mainContent_bottom { background: url(../images/whitebox_bottom.png) center t
 .chartModule li { margin-right: 35px; margin-bottom: 55px;}
 .insideList li { margin-right: 0; margin-bottom: 0;}
 
-.oneColumn { width: 230px; float: left;}
+.oneColumn { width: 240px; float: left;}
 .twoColumn { width: 520px; float: right;}
 .threeColumn { width: 785px; }
 .chartWrapper table { margin-top: 15px;}
 
 .chart { height: 250px;}
 .chartWrapper .tip, div.searchBox .results { display: block; color: #827d7d;}
+.chart .tip { margin-bottom: 0px;}
 
 #ltColumn { padding: 0 30px 0 40px; width: 650px; float: left; overflow: hidden;}
 #rtColumn { padding: 0 40px 80px 30px; width: 170px; float: left; overflow: hidden; margin-bottom: 50px}
@@ -403,6 +404,7 @@ form#contact li, #postcardBox form li, #vdayForm li { margin-bottom: 15px;}
 .cell-earmark-members li { list-style-type: disc; }
 .earmark_mainDescription { margin-bottom: 8px; display: block;}
 .moreEarmarks { font-family: Georgia, Times New Roman, Times, serif; font-style: oblique; margin-left: 15px;}
+.lobbyistsOrgs li, .issuesLobbied li, .billsLobbied li, .earmark-requests li { float: left; margin-right: 10px; margin-bottom: 0px;}
 
 .inArticle { float: left; width: 130px; background-color: #f9ea99; padding: 10px 15px; -moz-border-radius: 3px; -webkit-border-radius: 3px;  border:1px solid #EFCB01; }
 .inArticle li { float: left; margin-right: 5px; margin-bottom: 8px; font-family: Georgia, Times New Roman, Times, serif; font-style: italic;}
